--- a/www/assets/css/styles.css
+++ b/www/assets/css/styles.css
@@ -1,3 +1,13 @@
+.scroller {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    position: absolute;
+    top: 141px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
+
 .back-button {
     position: absolute;
     top: 10px;
@@ -28,6 +38,7 @@ a {
 .list {
     list-style-type: none;
     border-top: none !important;
+    overflow: hidden;
 }
 
 .list > li {
@@ -172,14 +183,4 @@ a {
     top: 22px;
     height: 50px;
     width: 28px;
-}
-
-.scroller {
-/*    overflow: auto;
-    -webkit-overflow-scrolling: touch;
-    position: absolute;
-    top: 141px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;*/
 }
